   - Modal screens no longer flash invisible children when rejecting a focus change.
   - Finally added StarSonata patch with table element and TabControl additions. Table is based on MultiColor listbox by Acki, and has loads of changes by CuteAlien.

-------------------------------------------
Changes in version 1.4.2 (x.x.2008)

 - Fixed rounding problem in getScreenCoordinatesFrom3DPosition

 - Fixed Software renderer color flicker, was a shift bug I believe.

 - irrMap fix to make root node always black, by rogerborg.

 - Possible core dump fixed in particle system node, by CuteAlien.

 - Mem leak fixed in b3d loader.

 - Avoid double rendering of child nodes of joints.

 - Support for d3d draw2dimage clipping by CuteAlien.

 - Fixed an animation transition bug, pointed out by wuallen.

 - Fixed the major problem with OpenGL drivers, that claim to be 2.x compatible, but don't offer NPOT support (well, they do, but only in sw rendering...). Now we check for the extension string only.

 - Fixed .obj loader bug which inserted vertices in wrong buffers.

 - Fixed minor mem leak in Linux device.

-------------------------------------------
Changes in version 1.4.1 (04 Jun 2008)

 - MD3 meshes are movable again.

 - New JPG image writer version by Vitek.

 - Texture matrix fixes, all methods should now work as expected.

 - Some container methods now return the this pointer after member functions have been called on them, in order to allow call chains.

 - Some new methods for SColorf access, for uniform API of all colors.

 - bug fix for SMaterialLayer equality check. Did only check the TextureMatrix pointers, instead of the matrices.

 - New getMesh method for the SceneManager, which takes an IReadFile instead of a filename.

 - Support for flags _WIN32 and _WIN64 in addition to WIN32 and WIN64 added, this simplifies usage of Irrlicht headers under MSVC.

 - Fixed a crash in GUIMeshViewer

 - new string method findLastChar by Halifax
