@@ -21,13 +21,13 @@ namespace scene
 	z-buffer for all really transparent, i.e. blending materials. This
 	avoids problems with intersecting faces, but can also break renderings.
 	If transparent materials should use the SMaterial flag for ZWriteEnable
-	jsut as other material types use this attribute.
+	just as other material types use this attribute.
 	Use it like this:
 	\code
-	SceneManager->getParameters()->setAttribute(scene::DISABLE_ZWRITE_ON_TRANPARENT, false);
+	SceneManager->getParameters()->setAttribute(scene::ALLOW_ZWRITE_ON_TRANSPARENT, true);
 	\endcode
 	**/
-	const c8* const DISABLE_ZWRITE_ON_TRANSPARENT = "Disable_ZWrite_On_Transparent";
+	const c8* const ALLOW_ZWRITE_ON_TRANSPARENT = "Allow_ZWrite_On_Transparent";
 
 	//! Name of the parameter for changing the texture path of the built-in csm loader.
 	/** Use it like this:
